# VegaFEM

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  buildImmersionMesher  buildTetMesher  cleanAll  vega-basic.sln  vega.sln
libraries/elasticForceModel/: CMakeLists.txt  Makefile  StVKForceModel.cpp  StVKForceModel.h  clothBWForceModel.cpp  clothBWForceModel.h  corotationalLinearFEMForceModel.cpp  corotationalLinearFEMForceModel.h  elasticForceModel.vcxproj  elasticForceModel.vcxproj.filters  isotropicHyperelasticFEMForceModel.cpp  isotropicHyperelasticFEMForceModel.h  linearFEMForceModel.cpp  linearFEMForceModel.h  massSpringSystemForceModel.cpp  massSpringSystemForceModel.h
libraries/integratorDense/: CMakeLists.txt  IPIVC.h  Makefile  centralDifferencesDense.cpp  centralDifferencesDense.h  implicitBackwardEulerDense.cpp  implicitBackwardEulerDense.h  implicitNewmarkDense.cpp  implicitNewmarkDense.h  implicitNewmarkDenseMulti1D.cpp  implicitNewmarkDenseMulti1D.h  integratorBaseDense.cpp  integratorBaseDense.h  integratorDense.vcxproj  integratorDense.vcxproj.filters  integratorMulti1D.cpp  integratorMulti1D.h
libraries/integratorSparse/: CMakeLists.txt  Makefile  centralDifferencesSparse.cpp  centralDifferencesSparse.h  eulerSparse.cpp  eulerSparse.h  implicitBackwardEulerSparse.cpp  implicitBackwardEulerSparse.h  implicitNewmarkSparse.cpp  implicitNewmarkSparse.h  integratorBaseSparse.cpp  integratorBaseSparse.h  integratorSparse.vcxproj  integratorSparse.vcxproj.filters
libraries/isotropicHyperelasticFEM/: CMakeLists.txt  Makefile  MooneyRivlinIsotropicMaterial.cpp  MooneyRivlinIsotropicMaterial.h  StVKIsotropicMaterial.cpp  StVKIsotropicMaterial.h  homogeneousMooneyRivlinIsotropicMaterial.cpp  homogeneousMooneyRivlinIsotropicMaterial.h  homogeneousNeoHookeanIsotropicMaterial.cpp  homogeneousNeoHookeanIsotropicMaterial.h  homogeneousStVKIsotropicMaterial.cpp  homogeneousStVKIsotropicMaterial.h  isotropicHyperelasticFEM.cpp  isotropicHyperelasticFEM.h  isotropicHyperelasticFEM.vcxproj  isotropicHyperelasticFEM.vcxproj.filters  isotropicHyperelasticFEMMT.cpp  isotropicMaterial.cpp  isotropicMaterial.h  isotropicMaterialWithCompressionResistance.cpp  isotropicMaterialWithCompressionResistance.h  neoHookeanIsotropicMaterial.cpp  neoHookeanIsotropicMaterial.h
libraries/massSpringSystem/: CMakeLists.txt  Makefile  massSpringSystem.cpp  massSpringSystem.h  massSpringSystem.vcxproj  massSpringSystem.vcxproj.filters  massSpringSystemFromCubicMesh.cpp  massSpringSystemFromCubicMesh.h  massSpringSystemFromCubicMeshConfigFile.cpp  massSpringSystemFromCubicMeshConfigFile.h  massSpringSystemFromObjMesh.cpp  massSpringSystemFromObjMesh.h  massSpringSystemFromObjMeshConfigFile.cpp  massSpringSystemFromObjMeshConfigFile.h  massSpringSystemFromTetMesh.cpp  massSpringSystemFromTetMesh.h  massSpringSystemFromTetMeshConfigFile.cpp  massSpringSystemFromTetMeshConfigFile.h  massSpringSystemMT.cpp  renderSprings.cpp  renderSprings.h
libraries/mesh/: CMakeLists.txt  Makefile  boundingBox.cpp  boundingBox.h  createTriMesh.cpp  createTriMesh.h  edgeKey.h  exactOctree.cpp  exactOctree.h  geometryQuery.cpp  geometryQuery.h  halfSpace.h  initPredicates.cpp  initPredicates.h  intersection_tunicate.cpp  labelOuterTets.cpp  labelOuterTets.h  mesh.vcxproj  mesh.vcxproj.filters  meshIntersection.cpp  meshIntersection.h  plane.h  predicates.cpp  predicates.h  predicates_Shewchuk.c  rectKey.cpp  rectKey.h  simpleSphere.cpp  simpleSphere.h  tetKey.cpp  tetKey.h  tetMeshGeo.cpp  tetMeshGeo.h  tetMeshManifold.cpp  tetMeshManifold.h  tetrahedron.h  triKey.cpp  triKey.h  triMeshGeo.cpp  triMeshGeo.h  (+15 more)
libraries/objMesh/: CMakeLists.txt  Makefile  createObjMesh.cpp  createObjMesh.h  objMesh.cpp  objMesh.h  objMesh.vcxproj  objMesh.vcxproj.filters  objMeshBinaryLoader.cpp  objMeshBinaryLoader.h  objMeshClose.cpp  objMeshClose.h  objMeshGraph.cpp  objMeshGraph.h  objMeshOctree.cpp  objMeshOctree.h  objMeshOffsetVoxels.cpp  objMeshOffsetVoxels.h  objMeshOrientable.cpp  objMeshOrientable.h  objMeshRender.cpp  octree.cpp  octree.h
libraries/objMeshGPUDeformer/: CMakeLists.txt  coarseToFine-shaders.cpp  objMeshGPUDeformer.cpp  objMeshGPUDeformer.h  objMeshGPUDeformer.vcxproj  objMeshGPUDeformer.vcxproj.filters  objMeshGPUDeformer_coarseToFine.cpp  objMeshGPUDeformer_coarseToFine.h  objMeshGPUDeformer_coarseToFine_fbo.cpp  objMeshGPUDeformer_coarseToFine_fbo.h  objMeshGPUDeformer_uUq.cpp  objMeshGPUDeformer_uUq.h  objMeshGPUDeformer_uUq_fbo.cpp  objMeshGPUDeformer_uUq_fbo.h  objMeshGPUDeformer_uUq_pbuffer.cpp  objMeshGPUDeformer_uUq_pbuffer.h  objMeshGPUDeformer_uUq_setLighting.cpp  objMeshGPUDeformer_uUq_setLighting.h  uUq-shaders.cpp
libraries/reducedElasticForceModel/: CMakeLists.txt  Makefile  reducedElasticForceModel.vcxproj  reducedElasticForceModel.vcxproj.filters  reducedLinearForceModel.cpp  reducedLinearForceModel.h  reducedLinearStVKForceModel.cpp  reducedLinearStVKForceModel.h  reducedMassSpringSystemForceModel.cpp  reducedMassSpringSystemForceModel.h  reducedMassSpringSystemForceModelWithHessian.cpp  reducedMassSpringSystemForceModelWithHessian.h  reducedSpringForceModel.cpp  reducedSpringForceModel.h  reducedStVKForceModel.cpp  reducedStVKForceModel.h  reducedStVKForceModelWithHessian.cpp  reducedStVKForceModelWithHessian.h  reducedSubspaceStVKForceModel.cpp  reducedSubspaceStVKForceModel.h
libraries/sceneObject/: CMakeLists.txt  Makefile  sceneGroundPlane.cpp  sceneGroundPlane.h  sceneObject.cpp  sceneObject.h  sceneObject.vcxproj  sceneObject.vcxproj.filters  sceneObject6DOF.cpp  sceneObject6DOF.h  sceneObjectDeformable6DOF.cpp  sceneObjectDeformable6DOF.h  sceneObjectDeformableGPU.cpp  sceneObjectDeformableGPU.h  sceneObjectDeformableGPU6DOF.cpp  sceneObjectDeformableGPU6DOF.h  sceneObjectWithRestPosition.cpp  sceneObjectWithRestPosition.h
libraries/sceneObjectReduced/: CMakeLists.txt  sceneObjectReduced.cpp  sceneObjectReduced.h  sceneObjectReduced.vcxproj  sceneObjectReduced.vcxproj.filters  sceneObjectReduced6DOF.cpp  sceneObjectReduced6DOF.h  (+8 more)
(+597 files in other folders)
